[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "Multi-agent codebase intelligence system for rapid FDE onboarding"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-sql>=0.3.0",
    "tree-sitter-yaml>=0.6.0",
    "sqlglot>=26.0.0",
    "networkx>=3.2",
    "pydantic>=2.0",
    "click>=8.0",
    "gitpython>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
llm = [
    "google-genai>=1.0",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "scikit-learn>=1.4",
    "tiktoken>=0.7",
]

[project.scripts]
cartographer = "src.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
